--- a/src/components/ProfilePage.css
+++ b/src/components/ProfilePage.css
@@ -141,8 +141,8 @@
 }
 
 .profile-avatar img {
-  width: 100%;
-  height: 100%;
+  width: 75%;
+  height: 75%;
   object-fit: cover;
 }
 
